--- a/app.json
+++ b/app.json
@@ -22,6 +22,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app needs acess to your camera in order to take pictures of your favorite locations"
+        }
+      ]
+    ]
   }
 }
